--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -59,7 +59,7 @@ body { background: url(%%colt%%) no-repeat fixed center center }
 
 .sidecontentbox .helplink + .title h1 { font-size: 0 !important }
 .sidecontentbox .helplink + .title h1:before { font-size: 10pt !important; content: "MODERATORS" }
-.sidecontentbox .helplink+.title+.content li:nth-of-type(4n) { display: none }
+.sidecontentbox .helplink+.title+.content li:nth-of-type(4) { display: none }
 
 .linkflairlabel { max-width: none }
 
