--- a/source-css/floofingandsqueaking.css
+++ b/source-css/floofingandsqueaking.css
@@ -4,7 +4,6 @@
  a[href|='/cowerscopper']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-300px 0}
  a[href|='/cowersflare']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:0 -150px}
  a[href|='/embarrassedcopper']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-600px 0}
-a[href|='/coppercoreiscute']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-600px 0}
  a[href|='/embarrassedflare']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-300px -150px}
  a[href|='/glompcopper']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-450px -150px}
  a[href|='/glompflare']{background-image:url(%%OKHmJ%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:0 -300px}
@@ -115,32 +114,68 @@ a[href|='/coppercoreiscute']{background-image:url(%%OKHmJ%%);background-repeat:n
  a[href|='/ww20vital']{background-image:url(%%3xCg3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:0 -750px}
  a[href|='/ww20waves']{background-image:url(%%3xCg3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-150px -750px}
 
- /* Emote Sheet nCaJM */ 
- a[href|='/blushyblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:0 0}
- a[href|='/blushyski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-160px 0}
- a[href|='/cowersblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:320px;height:160px;background-position:-320px 0}
- a[href|='/cowersski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:320px;height:160px;background-position:0 -160px}
- a[href|='/embarrassedblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-640px 0}
- a[href|='/embarrassedski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-320px -160px}
- a[href|='/glompblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:320px;height:160px;background-position:-480px -160px}
- a[href|='/glompski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:320px;height:160px;background-position:0 -320px}
- a[href|='/haiblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-320px -320px}
- a[href|='/haiski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-480px -320px}
- a[href|='/hidingblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-640px -320px}
- a[href|='/hidingski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:0 -480px}
- a[href|='/sadblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-160px -480px}
- a[href|='/sadski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-320px -480px}
- a[href|='/scrunchyblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-480px -480px}
- a[href|='/scrunchyski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-640px -480px}
- a[href|='/sittingblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:320px;background-position:-800px 0}
- a[href|='/sittingski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:320px;background-position:-800px -320px}
- a[href|='/sleepingblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:318px;height:160px;background-position:0 -640px}
- a[href|='/sleepingski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:318px;height:160px;background-position:-318px -640px}
- a[href|='/stuckblast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-636px -640px}
- a[href|='/stuckski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-796px -640px}
- a[href|='/ww20blast']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:0 -800px}
- a[href|='/ww20ski_']{background-image:url(%%nCaJM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:160px;height:160px;background-position:-160px -800px}
+ /* Emote Sheet RDiOa */ 
+,a[href|='/blushyblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-5px -5px}
+,a[href|='/blushyskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-165px -5px}
+,a[href|='/cowersblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-325px -5px}
+,a[href|='/cowersskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-5px -165px}
+,a[href|='/embarrassedblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-635px -5px}
+,a[href|='/embarrassedskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-315px -165px}
+,a[href|='/glompblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-475px -165px}
+,a[href|='/glompskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-5px -325px}
+,a[href|='/haiblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-315px -325px}
+,a[href|='/haiskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-475px -325px}
+,a[href|='/hidingblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-635px -325px}
+,a[href|='/hidingskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-5px -485px}
+,a[href|='/sadblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-165px -485px}
+,a[href|='/sadskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-325px -485px}
+,a[href|='/scrunchyblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-485px -485px}
+,a[href|='/scrunchyskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-645px -485px}
+,a[href|='/sittingblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:300px;background-position:-795px -5px}
+,a[href|='/sittingskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:300px;background-position:-805px -315px}
+,a[href|='/sleepingblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:299px;height:150px;background-position:-5px -645px}
+,a[href|='/sleepingskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:299px;height:150px;background-position:-314px -645px}
+,a[href|='/stuckblast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-805px -625px}
+,a[href|='/stuckskia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-623px -785px}
+,a[href|='/ww20blast']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-783px -785px}
+,a[href|='/ww20skia']{background-image:url(%%RDiOa%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-5px -945px}
  
 /* Emote Sheet emmxK */ 
  a[href|='/haichangeling']{background-image:url(%%emmxK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:0 0}
  a[href|='/haitek']{background-image:url(%%emmxK%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-150px 0}
+ 
+ /* Emote Sheet 85e3F */
+
+a[href|='/blushysilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:0 0}
+a[href|='/embarrassedsilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-150px 0}
+a[href|='/haisilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-300px 0}
+a[href|='/hidingsilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:0 -150px}
+a[href|='/sadsilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-150px -150px}
+a[href|='/sittingsilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:300px;background-position:-300px -150px}
+a[href|='/sleepingsilver']{background-image:url(%%85e3F%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:299px;height:150px;background-position:0 -300px}
+
+/* Emote Sheet 9jTbM */ 
+,a[href|='/blushynimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-5px -5px}
+,a[href|='/blushyten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-165px -5px}
+,a[href|='/cowersnimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-325px -5px}
+,a[href|='/cowersten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-5px -165px}
+,a[href|='/embarrassednimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-635px -5px}
+,a[href|='/embarrassedten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-315px -165px}
+,a[href|='/glompnimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-475px -165px}
+,a[href|='/glompten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:300px;height:150px;background-position:-5px -325px}
+,a[href|='/hainimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-315px -325px}
+,a[href|='/haiten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-475px -325px}
+,a[href|='/hidingnimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-635px -325px}
+,a[href|='/hidingten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-5px -485px}
+,a[href|='/sadnimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-165px -485px}
+,a[href|='/sadten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-325px -485px}
+,a[href|='/scrunchynimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-485px -485px}
+,a[href|='/scrunchyten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-645px -485px}
+,a[href|='/sittingnimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:300px;background-position:-795px -5px}
+,a[href|='/sittingten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:300px;background-position:-805px -315px}
+,a[href|='/sleepingnimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:299px;height:150px;background-position:-5px -645px}
+,a[href|='/sleepingten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:299px;height:150px;background-position:-314px -645px}
+,a[href|='/stucknimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-805px -625px}
+,a[href|='/stuckten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-623px -785px}
+,a[href|='/ww20nimbus']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-783px -785px}
+,a[href|='/ww20ten']{background-image:url(%%9jTbM%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:150px;height:150px;background-position:-5px -945px}
