--- a/source-css/sugarbelle.css
+++ b/source-css/sugarbelle.css
@@ -200,6 +200,7 @@ color:#000440;
 }
 .res .side .subscribe-button {
 margin-right:0px;
+height:16px;
 }
 .res .side .subscribe-button .option {
 border-radius:3px 0 0 3px;
