--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -48,7 +48,7 @@
 
 .sidecontentbox .helplink + .title h1 { font-size: 0 !important }
 .sidecontentbox .helplink + .title h1:before { font-size: 10pt !important; content: "MUSIC DIRECTORS" }
-.sidecontentbox .helplink+.title+.content li:nth-of-type(2n) { display: none }
+.sidecontentbox .helplink+.title+.content li:nth-of-type(2) { display: none }
 
 /*** Comments ***/
 
