--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -185,25 +185,14 @@ background-position: 0 0;
 height: 70px;
 }
 
-/* NSFW -> Spoiler. Shamelessly ripped from /r/mylittlepony */
-.marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"]
-{
- font-size:0px!important;
- display:inline-block;
- vertical-align:top;
- overflow:hidden;
- letter-spacing:-20px;
- content:""
+/* Hide NSFW button, if you're not a mod */
+body:not(.moderator) .marknsfw-button a[href="#"], body:not(.moderator) .unmarknsfw-button a[href="#"] {
+    display:none;
 }
-
-.unmarknsfw-button a[href="#"]:before, .marknsfw-button a[href="#"]:before
-{
- font-size:10px!important;
- display:block;
- letter-spacing:normal;
- content:"spoiler"
+/* kinda ugly way to stop the extra large gap from the missing button */
+body:not(.moderator) .spoiler-button a[href="#"], body:not(.moderator) .unspoiler-button a[href="#"] {
+    margin-left: -8px;
 }
-.unmarknsfw-button a[href="#"]:before{content:"un-spoiler";}
 
 .nsfw-stamp acronym
 {
@@ -458,7 +447,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"], a[href|="/ppcuteshrug"], a[href|="/riffyeah"], a[href|="/supersmugdash"], a[href|="/rdyes"], a[href|="/starlightbeam"], a[href|="/nervousshy"], a[href|="/quibblepants"], a[href|="/moondancerexcited"], a[href|="/ajuwotm8"], a[href|="/ajuwatm8"], a[href|="/celestiawtf"], a[href|="/dragonlordtorch"], a[href|="/rdwutbag"], a[href|="/moondancercrazy"], a[href|="/moondancersquint"], a[href|="/whofarted"], a[href|="/ajwingspanked"], a[href|="/sadtwilight3"], a[href|="/yaksmash"], a[href|="/twiwatstare"], a[href|="/zecoraponder"], a[href|="/twilightpbbt"], a[href|="/celestiapout"], a[href|="/pinkiesly"], a[href|="/flurrywink"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -476,6 +465,10 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 /* 100x100d 'motes */
 a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/chrysalisrage"], a[href|="/youdensemotherbucker"], a[href|="/ponkponder"], a[href|="/peachhack"], a[href|="/rude"], a[href|="/nightmarewut"], a[href|="/rddisapproves"], a[href|="/midnightaegis"], a[href|="/twistop"], a[href|="/twithinking"], a[href|="/shouldikickthepuppy"], a[href|="/tiajealous"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
+
+/* 100x100e 'motes */
+a[href|="/raritythink"], a[href|="/rescuegrump"]
+{background-image:url(%%100x100e%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
 a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[href|="/twihappycry"], a[href|="/properbudget"], a[href|="/celestiaglee"], a[href|="/frittergasp"], a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/whatatwist"], a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/sombrarage"], a[href|="/gildaconfused"], a[href|="/rarityspy"], a[href|="/twilightyay"], a[href|="/tiadisapproval"]
@@ -498,7 +491,7 @@ a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shy
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150f 'motes */
-a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"]
+a[href|="/twitation"], a[href|="/yourexistenceannoysme"], a[href|="/apfle"], a[href|="/derpystop"], a[href|="/abstop"], a[href|="/octilewd"], a[href|="/fingerguns"], a[href|="/thatswhereyourewrongkiddo"], a[href|="/twiyoudontsay"], a[href|="/thatslewd"]
 {background-image:url(%%150x150f%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -579,7 +572,7 @@ a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthe
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /* Misfits p */
-a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"]
+a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[href|="/fluttersmugsmall"], a[href|="/reasonablysizedfluttersmug"], a[href|="/smugpuppykicking"], a[href|="/ppspooks"], a[href|="/trixiedisgust"], a[href|="/chairmanstarlight"], a[href|="/chairmarestarlight"], a[href|="/sodacookie"], a[href|="/sadhug"], a[href|="/octyvinylboop"], a[href|="/sunburstwat"], a[href|="/lyrahandsarejustright"], a[href|="/rescuehappy"], a[href|="/batdash"], a[href|="/tiawing"], a[href|="/dontsleeptonight"], a[href|="/buttstho"], a[href|="/humantwiblush"], a[href|="/dashplace"]
 {background-image:url(%%misfitsp%%);display:block;float:left;}
 
 /*
@@ -587,11 +580,11 @@ a[href|="/celestiawat"], a[href|="/hellodarkness"], a[href|="/discordross"], a[h
  */
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"], a[href|="/twithatsnice"], a[href|="/boopening"], a[href|="/trixcookie"], a[href|="/vinylscrewyou"], a[href|="/twitation"]
+a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"], a[href|="/sadbot"], a[href|="/twithatsnice"], a[href|="/boopening"], a[href|="/trixcookie"], a[href|="/vinylscrewyou"], a[href|="/twitation"], a[href|="/raritythink"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"], a[href|="/uwotdahling"], a[href|="/superalicorn"], a[href|="/season4"], a[href|="/venonat"], a[href|="/buysomeapples"], a[href|="/trixiecrazy"], a[href|="/agentt"], a[href|="/spitfirejudge"], a[href|="/browniewat"], a[href|="/yourexistenceannoysme"]
+a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"], a[href|="/uwotdahling"], a[href|="/superalicorn"], a[href|="/season4"], a[href|="/venonat"], a[href|="/buysomeapples"], a[href|="/trixiecrazy"], a[href|="/agentt"], a[href|="/spitfirejudge"], a[href|="/browniewat"], a[href|="/yourexistenceannoysme"], a[href|="/rescuegrump"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
@@ -615,11 +608,11 @@ a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pink
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
-a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"], a[href|="/applebloom"], a[href|="/karmagrin"], a[href|="/deeplyintriguedcadance"], a[href|="/bloomening"], a[href|="/twicheesy"], a[href|="/emberhappy"], a[href|="/faustilicious"]
+a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutraljack"], a[href|="/scootexcited"], a[href|="/happynewyear"], a[href|="/justforyou"], a[href|="/pinkieoooh"], a[href|="/pptsundere"], a[href|="/notenoughtwi"], a[href|="/applebloom"], a[href|="/karmagrin"], a[href|="/deeplyintriguedcadance"], a[href|="/bloomening"], a[href|="/twicheesy"], a[href|="/emberhappy"], a[href|="/faustilicious"], a[href|="/twiyoudontsay"]
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"], a[href|="/apathiablank"], a[href|="/vinylderp"], a[href|="/clearlestia"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"], a[href|="/celestiaiswatching"], a[href|="/apathiablank"], a[href|="/vinylderp"], a[href|="/clearlestia"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/thatslewd"]
 {background-position: -200% -200%;}
 
 /* Grid pos 0,3 'motes */
@@ -759,23 +752,23 @@ a[href|="/lemonfire"], a[href|="/daringblush"], a[href|="/twiwatstare"]
 {background-position: 0 -1400%;}
 
 /* Grid pos 1,14 'motes */
-a[href|="/rarispikemeh"], a[href|="/whotf"]
+a[href|="/rarispikemeh"], a[href|="/whotf"], a[href|="/zecoraponder"]
 {background-position: -100% -1400%;}
 
 /* Grid pos 2,14 'motes */
-a[href|="/rarispikenervous"], a[href|="/celestiafrown"]
+a[href|="/rarispikenervous"], a[href|="/celestiafrown"], a[href|="/twilightpbbt"]
 {background-position: -200% -1400%;}
 
 /* Grid pos 0,15 'motes */
-a[href|="/rarilouder"], a[href|="/twidoubt"]
+a[href|="/rarilouder"], a[href|="/twidoubt"], a[href|="/celestiapout"]
 {background-position: 0 -1500%;}
 
 /* Grid pos 1,15 'motes */
-a[href|="/rarirdannoyed"], a[href|="/ppdoubt"]
+a[href|="/rarirdannoyed"], a[href|="/ppdoubt"], a[href|="/pinkiesly"]
 {background-position: -100% -1500%;}
 
 /* Grid pos 2,15 'motes */
-a[href|="/rarirdcry"], a[href|="/raridoubt"]
+a[href|="/rarirdcry"], a[href|="/raridoubt"], a[href|="/flurrywink"]
 {background-position: -200% -1500%;}
 
 /* Grid pos 0,16 'motes */
@@ -1218,3 +1211,11 @@ a[href|="/sodacookie"] {width:74px;height:100px;background-position: -454px 0}
 a[href|="/sadhug"] {width:199px;height:150px;background-position: -108px -100px}
 a[href|="/octyvinylboop"] {width:227px;height:150px;background-position: -307px -100px}
 a[href|="/sunburstwat"] {width:127px;height:200px;background-position: -129px -370px}
+a[href|="/lyrahandsarejustright"] {width:150px;height:78px;background-position: -528px 0}
+a[href|="/rescuehappy"] {width:108px;height:150px;background-position: -534px -78px}
+a[href|="/batdash"] {width:114px;height:150px;background-position: -642px -100px}
+a[href|="/tiawing"] {width:135px;height:150px;background-position: -759px -100px}
+a[href|="/dontsleeptonight"] {width:120px;height:120px;background-position: -120px -250px}
+a[href|="/buttstho"] {width:117px;height:120px;background-position: -240px -250px}
+a[href|="/humantwiblush"] {width:96px;height:130px;background-position: -256px -370px}
+a[href|="/dashplace"] {width:114px;height:180px;background-position: -352px -370px}
